--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,49 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## Build generated
+build/
+DerivedData/
+
+# Mac OS X
+.DS_Store
+
+#CocoaPods
+Pods/
+Podfile.lock
+
+#Reports
+sonar-reports/
+.scannerwork/
+run-sonar-swift.sh
+sonar-project.properties
+Xcodebuild.log
+
+## Various settings
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+ijura.xcodeproj/project.xcworkspace/xcuserdata/
+ijura/Models/KeyFile.Swift
+
+## Other
+*.moved-aside
+*.xcuserstate
+
 ## User settings
 xcuserdata/
 
 ## Obj-C/Swift specific
 *.hmap
+*.ipa
+*.dSYM.zip
+*.dSYM
 
 ## App packaging
 *.ipa
